Added a few onload functions.

--- a/index.html
+++ b/index.html
@@ -168,6 +168,9 @@
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/_3D_grammar.js"></script>
+    <script src="assets/js/_3D_Interpreter.js"></script>
+    <script src="assets/js/_3D_Utility.js"></script>
 </body>
 
 </html>
