Added full Interpreter & Debugger functionality.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@
                     <div><label>Source Code</label></div><div id = "Ejecutar_Source_Container"><textarea id="Ejecutar_3D_Source" rows="18" readonly="true" cols="50"></textarea></div></div>
                 <div class="col" id="Ejecutar_Options">
                     <div class="row">
-                        <div class="col" href="#"><button class="btn btn-danger" style="border: none;width: 100%;height: auto;background-color: #1afa3e;color: rgb(0,0,0);margin: auto;padding-left: 2.5em;padding-right: 2.5em;margin-bottom: 1em;" type="button">Iniciar</button></div>
+                        <div class="col" href="#"><button class="btn btn-danger" style="border: none;width: 100%;height: auto;background-color: #1afa3e;color: rgb(0,0,0);margin: auto;padding-left: 2.5em;padding-right: 2.5em;margin-bottom: 1em;" type="button" id = "Iniciar">Iniciar</button></div>
+                    </div>
+                    <div class="row Debug_Container_Hide" id = "Recover_Container">
+                        <div class="col" href="#"><button class="btn btn-danger" style="border: none;width: 100%;height: auto;background-color: red;color: white;margin: auto;padding-left: 2.5em;padding-right: 2.5em;margin-bottom: 1em;" type="button" id = "Recover">Continuar</button></div>
                     </div>
                     <div class="row">
                         <div class="col">
