--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
             <div class="row">
                 <div class="col" id="Ejecutar_TextArea">
-                    <div><label>Source Code</label></div><div id = "Ejecutar_Source_Container"><textarea id="Ejecutar_3D_Source" rows="18" readonly="true" cols="50"></textarea></div></div>
+                    <div><label>3D Source Code</label></div><div id = "Ejecutar_Source_Container"><textarea id="Ejecutar_3D_Source" rows="18" readonly="true" cols="50"></textarea></div></div>
                 <div class="col" id="Ejecutar_Options">
                     <div class="row">
                         <div class="col" href="#"><button class="btn btn-danger" style="border: none;width: 100%;height: auto;background-color: #1afa3e;color: rgb(0,0,0);margin: auto;padding-left: 2.5em;padding-right: 2.5em;margin-bottom: 1em;" type="button" id = "Iniciar">Iniciar</button></div>
@@ -135,7 +135,9 @@
             </div>
             <div class="row">
                 <div class="col" id="Main_TextArea">
-                    <div><label>Source Code</label></div><textarea id="Main_Source" rows="18"></textarea></div>
+                    <div id = "Tab_titles" class = "row"></div>
+                    <div id = "Source_TextAreas"></div>
+                </div>
                 <div class="col" id="Main_Options">
                     <div class="row">
                         <div class="col">
@@ -154,7 +156,10 @@
                                     </tr>
                                     <tr>
                                         <td></td>
-                                        <td><button class="btn btn-danger" id="Cargar_Button" style="border: none;width: 100%;height: auto;background-color: #1effff;color: rgb(0,0,0);margin: auto;/*padding-left: 2.5em;*//*padding-right: 2.5em;*/" type="button">Cargar</button></td>
+                                        <td>
+                                            <label for="input-file">Load File:</label><br>
+                                            <input type="file" id="input-file">
+                                        </td>
                                         <td></td>
                                     </tr>
                                     <tr>
@@ -246,11 +251,11 @@
                     <div><label>Source Code</label></div><div id = "Debug_Source_Container"><textarea id="ThreeD_Source" rows="22" class="codemirror-textarea">
 proc Fibonacci{
 n = stack[P]
-if (t1!=0) goto L2
-stack[P]=1
+if n!=0 goto L2
+stack[P]=0
 goto L1
 L2:
-if (t3!=1) goto L3
+if n!=1 goto L3
 stack[P]=1
 goto L1
 L3:
@@ -283,7 +288,8 @@ P = P - 1
 P = P + 1
 stack[P]=nombre
 call printString
-t10=8
+t10=10 ;t10 = Valor sobre el cual se caculara Fibonacci.
+;En este caso 10. Se puede cambiar por cualquier numero.
 P = P + 1
 stack[P]=t10
 call Fibonacci
@@ -339,7 +345,7 @@ t14=t13
 j=string1
 i=0
 L4:
-if (i>=size1) goto L2
+if i>=size1 goto L2
 t14=t14+1
 i=i+1
 j=j+1
@@ -350,7 +356,7 @@ L5:
 j=string2
 i=0
 L6:
-if (i>=size2) goto L7
+if i>=size2 goto L7
 t14=t14+1
 i=i+1
 j=j+1
@@ -472,7 +478,7 @@ call push_String
 P = P + 1
 stack[P]=title
 P = P + 1
-stack[P]=58
+stack[P]=58 ;; 58 = Ascii code of 8
 P = P + 1
 stack[P]=15
 call push_String
@@ -489,7 +495,7 @@ P = P - 1
 size = heap[cadena]
 t18=0
 L8:
-if (t18>=size) goto L9
+if t18>=size goto L9
 t18=t18+1
 t20=t18+cadena
 t21 = heap[t20]
@@ -503,8 +509,7 @@ goto L8
 L9:
 }
 
-
-                </textarea></div></div>
+ </textarea></div></div>
                 <div class="col" id="Debug_Options">
                     <div class="row BreakPoint_Container_Container">
                         <div class="col col-3">
@@ -685,6 +690,7 @@ L9:
     <script src="assets/js/_3D_grammar.js"></script>
     <script src="assets/js/_3D_Interpreter.js"></script>
     <script src="assets/js/_3D_Utility.js"></script>
+<script src="assets/js/_Y_Compiler_Utility.js"></script>
 </body>
 
 </html>
