Installed Toast Messages.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/BasicButton.css">
+    <link rel="stylesheet" href="assets/css/jquery.toast.min.css">
 </head>
 
 <body>
@@ -151,15 +152,15 @@
                                     <tbody>
                                     <tr>
                                         <td></td>
-                                        <td><button class="btn btn-danger" id="Nuevo_Button" style="border: none;width: 100%;height: auto;background-color: #24ff00;color: rgb(0,0,0);margin: auto;/*padding-left: 2.5em;*//*padding-right: 2.5em;*/" type="button">Nuevo</button></td>
-                                        <td></td>
-                                    </tr>
-                                    <tr>
-                                        <td></td>
                                         <td>
                                             <label for="input-file">Load File:</label><br>
                                             <input type="file" id="input-file">
                                         </td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td><button class="btn btn-danger" id="Nuevo_Button" style="border: none;width: 100%;height: auto;background-color: #24ff00;color: rgb(0,0,0);margin: auto;/*padding-left: 2.5em;*//*padding-right: 2.5em;*/" type="button">Nuevo</button></td>
                                         <td></td>
                                     </tr>
                                     <tr>
@@ -683,6 +684,7 @@ L9:
     </div>
     </div>
     <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.toast.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="lib/codemirror.js"></script>
     <link rel="stylesheet" href="lib/codemirror.css">
@@ -690,7 +692,7 @@ L9:
     <script src="assets/js/_3D_grammar.js"></script>
     <script src="assets/js/_3D_Interpreter.js"></script>
     <script src="assets/js/_3D_Utility.js"></script>
-<script src="assets/js/_Y_Compiler_Utility.js"></script>
+    <script src="assets/js/_Y_Compiler_Utility.js"></script>
 </body>
 
 </html>
