--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/BasicButton.css">
     <link rel="stylesheet" href="assets/css/jquery.toast.min.css">
+    <link rel="stylesheet" href="assets/css/Accordion-3338arvorept-1.css">
+    <link rel="stylesheet" href="assets/css/Accordion-3338arvorept.css">
 </head>
 
 <body>
@@ -25,9 +27,13 @@
         <div
             class="col"><button class="btn btn-danger Secondary_Options" id="AST_Button" style="border:none;width:auto;height:auto;background-color:#face1a;color:rgb(0,0,0);margin:auto;padding-left:2.5em;padding-right:2.5em;" type="button" RValue = "AST">AST</button></div>
     <div class="col"><button class="btn btn-danger Secondary_Options" id="TablaDeSimbolos_Button" style="border: none;width: auto;height: auto;background-color: #face1a;color: rgb(0,0,0);margin: auto;padding-left: 2.5em;padding-right: 2.5em;" type="button" RValue="SYMBOL_TABLE">Tabla de Simbolos</button></div>
-    <div
-        class="col"><button class="btn btn-danger Secondary_Options" id="Optimizacion_Button" style="border: none;width: auto;height: auto;background-color: #face1a;color: rgb(0,0,0);margin: auto;padding-left: 2.5em;padding-right: 2.5em;" type="button" RValue="OPTIMIZACION">Optimizacion</button></div>
-        </div>
+    <div class="col">
+        <button class="btn btn-danger Secondary_Options" id="Optimizacion_Button" style="border: none;width: auto;height: auto;background-color: #face1a;color: rgb(0,0,0);margin: auto;padding-left: 2.5em;padding-right: 2.5em;" type="button" RValue="OPTIMIZACION">Optimizacion</button>
+    </div>
+    <div class="col">
+            <button class="btn btn-danger Secondary_Options" id="Folders_Classes_Button" style="border: none;width: auto;height: auto;background-color: #face1a;color: rgb(0,0,0);margin: auto;padding-left: 2.5em;padding-right: 2.5em;" type="button" RValue="FOLDERS_CLASSES">Folders & Classes</button></div>
+    </div>
+    </div>
     <div class="row Debug_Container_Hide" id="SYMBOL_TABLE">
         <div class="col">
             <div class="Display_Title"><label class="Inline_Title Display_Title">Tabla de Simbolos</label>
@@ -129,6 +135,48 @@
             </div>
         </div>
     </div>
+    <div class="row Debug_Container_Hide" id="FOLDERS_CLASSES">
+    <div class="col">
+        <div class="row">
+            <div class="col">
+                <div class="row">
+                    <div class="col FolderHeaderContainer"><button class="btn btn-link border-pretty" id="AddFolderButton" type="button">Add Folder </button></div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="row">
+                    <div class="col Display_Title"><label class="col-form-label Inline_Title Display_Title">Classes</label></div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="table-responsive">
+                            <table class="table">
+                                <thead>
+                                <tr>
+                                    <th>Column 1</th>
+                                    <th>Column 2</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <td>Cell 1</td>
+                                    <td>Cell 2</td>
+                                </tr>
+                                <tr>
+                                    <td>Cell 3</td>
+                                    <td>Cell 4</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
     <div class="row" id="MAIN">
         <div class="col">
             <div class="row">
