Added Full functinality for Creating new file or uploading one.

--- a/index.html
+++ b/index.html
@@ -209,7 +209,14 @@
                                     </tr>
                                     <tr>
                                         <td></td>
-                                        <td><button class="btn btn-danger" id="Nuevo_Button" style="border: none;width: 100%;height: auto;background-color: #24ff00;color: rgb(0,0,0);margin: auto;/*padding-left: 2.5em;*//*padding-right: 2.5em;*/" type="button">Nuevo</button></td>
+                                        <td>
+                                            <div class = "row" id="create_file_dialog">
+                                                <div style="margin:auto;">
+                                                    <input type="text" id="file_name" name="file_name" placeholder="Main.OLCEV"></input>
+                                                    <button type="button" id="create_file_button">Nuevo</button>
+                                                </div>
+                                            </div>
+                                        </td>
                                         <td></td>
                                     </tr>
                                     <tr>
