Started an Small Import location solver engine.

--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
                             <th>Linea</th>
                             <th>Columna</th>
                             <th>Clase</th>
+                            <th>Archivo</th>
                         </tr>
                         </thead>
                         <tbody id="ErrorTableBody">
@@ -751,6 +752,7 @@ L9:
     <script src="assets/js/_Y_Compiler_Utility.js"></script>
     <script src="assets/js/Y_Compiler.js"></script>
     <script src="assets/js/_Import_Grammar.js"></script>
+    <script src="assets/js/_Aux_Grammar.js"></script>
 </body>
 
 </html>
