Added Small details before starting Code Optimization.

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                                         <td>
                                             <div class = "row" id="create_file_dialog">
                                                 <div style="margin:auto;">
-                                                    <input type="text" id="file_name" name="file_name" placeholder="Main.OLCEV"></input>
+                                                    <input type="text" id="file_name" name="file_name" placeholder="Main.CEV"></input>
                                                     <button type="button" id="create_file_button">Nuevo</button>
                                                 </div>
                                             </div>
