Added First Version of Code Optimizer.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
     <div class="row Debug_Container_Hide" id="OPTIMIZACION">
         <div class="col">
-            <div class="Display_Title"><label class="Inline_Title Display_Title">Reporte de Optimizacion</label>
+            <div class="Display_Title"><label class="Inline_Title Display_Title" id = "Optimization_button">Reporte de Optimizacion</label>
                 <div class="table-responsive">
                     <table class="table">
                         <thead id="OPTIMIZACION_HEADER">
@@ -739,6 +739,7 @@ L9:
     </div>
     </div>
     <div class = "Debug_Container_Hide" id="Unified_Source"></div>
+    <div class = "Debug_Container_Hide" id="Optimized_code"></div>
 </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.toast.min.js"></script>
@@ -753,6 +754,7 @@ L9:
     <script src="assets/js/Y_Compiler.js"></script>
     <script src="assets/js/_Import_Grammar.js"></script>
     <script src="assets/js/_Aux_Grammar.js"></script>
+    <script src="assets/js/_Optimizer_grammar.js"></script>
 </body>
 
 </html>
