Added Second Version of Code Optimizer.

--- a/index.html
+++ b/index.html
@@ -754,6 +754,7 @@ L9:
     <script src="assets/js/Y_Compiler.js"></script>
     <script src="assets/js/_Import_Grammar.js"></script>
     <script src="assets/js/_Aux_Grammar.js"></script>
+    <script src="assets/js/_3D_Optimizer.js"></script>
     <script src="assets/js/_Optimizer_grammar.js"></script>
 </body>
 
