Added Third & Final version of Code Optimizer.

--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
                         </tbody>
                     </table>
                 </div>
+                <h2>Salida</h2>
+                <div id="Optimized_code" class = "Optimized_field"></div>
             </div>
         </div>
     </div>
@@ -739,7 +741,6 @@ L9:
     </div>
     </div>
     <div class = "Debug_Container_Hide" id="Unified_Source"></div>
-    <div class = "Debug_Container_Hide" id="Optimized_code"></div>
 </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.toast.min.js"></script>
