--- a/index.html
+++ b/index.html
@@ -752,11 +752,12 @@ L9:
     <script src="assets/js/_3D_Interpreter.js"></script>
     <script src="assets/js/_3D_Utility.js"></script>
     <script src="assets/js/_Y_Compiler_Utility.js"></script>
-    <script src="assets/js/Y_Compiler.js"></script>
+    <script src="assets/js/Compiler_Utility.js"></script>
     <script src="assets/js/_Import_Grammar.js"></script>
     <script src="assets/js/_Aux_Grammar.js"></script>
     <script src="assets/js/_3D_Optimizer.js"></script>
     <script src="assets/js/_Optimizer_grammar.js"></script>
+    <script src="assets/js/_Y_Grammar.js"></script>
 </body>
 
 </html>
