--- a/index.html
+++ b/index.html
@@ -757,6 +757,7 @@ L9:
     <script src="assets/js/_Aux_Grammar.js"></script>
     <script src="assets/js/_3D_Optimizer.js"></script>
     <script src="assets/js/_Optimizer_grammar.js"></script>
+    <script src="assets/js/Y_Compiler.js"></script>
     <script src="assets/js/_Y_Grammar.js"></script>
 </body>
 
