Added First version of AST visualization!

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/BasicButton.css">
     <link rel="stylesheet" href="assets/css/jquery.toast.min.css">
+    <link rel="stylesheet" href="assets/css/Treant.css">
 </head>
 
 <body>
@@ -759,6 +760,8 @@ L9:
     <script src="assets/js/_Optimizer_grammar.js"></script>
     <script src="assets/js/Y_Compiler.js"></script>
     <script src="assets/js/_Y_Grammar.js"></script>
+    <script src="assets/js/Treant/raphael.js"></script>
+    <script src="assets/js/Treant/Treant.js"></script>
 </body>
 
 </html>
