Added Syntax Highlighting

--- a/index.html
+++ b/index.html
@@ -747,7 +747,8 @@ L9:
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="lib/codemirror.js"></script>
     <link rel="stylesheet" href="lib/codemirror.css">
-    <script src="modes/ntriples/ntriples.js"></script>
+    <script src="modes/mode.js"></script>
+    <script src="modes/java.js"></script>
     <script src="assets/js/_3D_grammar.js"></script>
     <script src="assets/js/_3D_Interpreter.js"></script>
     <script src="assets/js/_3D_Utility.js"></script>
