Added entry point selection functionality.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
     <div class="row Debug_Container_Hide" id="AST">
         <div class="col">
-            <div class="Display_Title"><label class="Inline_Title Display_Title">AST</label>
+            <div class="Display_Title"><label id="AST_Title" class="Inline_Title Display_Title">AST</label>
                 <div id="AST_Container"></div>
             </div>
         </div>
@@ -183,7 +183,7 @@
     <div class="row" id="MAIN">
         <div class="col">
             <div class="row">
-                <div class="col Title_Container"><label class="col-form-label Display_Title Inline_Title"><strong>Alto Nivel</strong></label></div>
+                <div class="col Title_Container"><label class="col-form-label Display_Title Inline_Title"><strong id = "Compile_Title">Alto Nivel</strong></label></div>
             </div>
             <div class="row">
                 <div class="col" id="Main_TextArea">
@@ -760,6 +760,7 @@ L9:
     <script src="assets/js/_Optimizer_grammar.js"></script>
     <script src="assets/js/Y_Compiler.js"></script>
     <script src="assets/js/_Y_Grammar.js"></script>
+    <script src="assets/js/Code_Generator.js"></script>
 </body>
 
 </html>
