--- a/index.html
+++ b/index.html
@@ -761,6 +761,7 @@ L9:
     <script src="assets/js/Y_Compiler.js"></script>
     <script src="assets/js/_Y_Grammar.js"></script>
     <script src="assets/js/Code_Generator.js"></script>
+    <script src="assets/js/Printing.js"></script>
 </body>
 
 </html>
