Fixed some overall bugs & added a few extra directives

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
     <div>
         <div class="container">
             <div class="row">
-                <div class="col Title_Container"><label class="col-form-label Depurar_Title"><strong>Depurar</strong></label></div>
+                <div class="col Title_Container"><label id = "DepurarTitle" class="col-form-label Depurar_Title"><strong>Depurar</strong></label></div>
             </div>
             <div class="row">
                 <div class="col" id="Debug_TextArea">
