--- a/index.html
+++ b/index.html
@@ -117,14 +117,11 @@
                                         <th colspan="2">Console</th>
                                     </tr>
                                     </thead>
-                                    <tbody id="Ejecutar_Console">
+                                    <tbody id="Ejecutar_Console_body">
                                     <tr>
-                                        <td>&gt;&gt;</td>
-                                        <td style="width: 100%;text-align: left;">Cell 2</td>
-                                    </tr>
-                                    <tr>
-                                        <td>&gt;&gt;</td>
-                                        <td>Cell 4</td>
+                                        <td colspan="2">
+                                            <textarea style="width: 100%;" cols="10" rows="10" spellcheck="false"  id="Ejecutar_console"></textarea>
+                                        </td>
                                     </tr>
                                     </tbody>
                                 </table>
@@ -462,15 +459,12 @@
                                     <th colspan="2">Console</th>
                                 </tr>
                             </thead>
-                            <tbody id="Debug_Console">
-                                <tr>
-                                    <td>&gt;&gt;</td>
-                                    <td>Cell 2</td>
-                                </tr>
-                                <tr>
-                                    <td>&gt;&gt;</td>
-                                    <td>Cell 4</td>
-                                </tr>
+                            <tbody id="Debug_Console_body">
+                            <tr>
+                                <td colspan="2">
+                                    <textarea style="width: 100%" spellcheck="false" cols="10" rows="10" id="Debug_console"></textarea>
+                                </td>
+                            </tr>
                             </tbody>
                         </table>
                     </div>
