--- a/index.html
+++ b/index.html
@@ -225,6 +225,11 @@
                                     </tr>
                                     <tr>
                                         <td></td>
+                                        <td><button class="btn btn-danger" id="Help_Button" style="border: none;width: 100%;height: auto;background-color: #00ff89;color: rgb(0,0,0);margin: auto;/*padding-left: 2.5em;*//*padding-right: 2.5em;*/" type="button">Ayuda</button></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
                                         <td><button class="btn btn-danger" id="Compilar_Main" style="border: none;width: 100%;height: auto;background-color: #960090;color: rgb(255,255,255);margin: auto;/*padding-left: 2.5em;*//*padding-right: 2.5em;*/" type="button">Compilar</button></td>
                                         <td></td>
                                     </tr>
